--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "pinia": "^2.0.33",
     "pinia-plugin-persistedstate": "^3.1.0",
     "qs": "^6.11.1",
+    "socket.io-client": "^4.7.5",
     "store2": "^2.14.2",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6"
