--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@
 # VITE_XXX = {"client1": "xxx", "client2": "yyy"}
 
 # 应用标题
-VITE_APP_TITLE = Vue3 Boot
+VITE_APP_TITLE = P2P视频通话
 
 # 应用标识ID
-VITE_APP_ID = vue3Boot
+VITE_APP_ID = p2pCall
